algoritmo 1.1